# octopy-energy-api

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: cached_pricing.py  compare_tariffs.py  fetch_account_info.py  fetch_consumption.py
src/octopy/: __about__.py  __init__.py  client.py  config.py  constants.py  exceptions.py  models.py
tests/: conftest.py  test_account.py  test_client.py  test_config.py  test_consumption.py  test_exceptions.py  test_models.py  test_pricing.py  test_products.py
